# rust-app

./: Cargo.toml  README.md  Rocket.toml
src/: lib.rs  main.rs  models.rs  schema.rs
src/controllers/: auth.rs  microposts.rs  mod.rs  users.rs
src/features/: fetch_microposts.rs
src/helpers/: auth.rs  comman.rs  common.rs  fetch_microposts.rs  microposts.rs  mod.rs  users.rs
src/models/: forms.rs  indexes.rs  mod.rs  tables.rs
