[package]
name = "app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.8", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
chrono = "0.4.19"
bcrypt = "0.10.1"
rocket = "0.5.0-rc.1"
